--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FireSong",
-  "version": "1.0.0",
-  "description": "FireSong written by David Csizmadia and Milan Szekely",
+  "version": "1.0.1",
+  "description": "FireSong has written by David Csizmadia and Milan Szekely.",
   "main": "src/main.js",
   "scripts": {
     "postinstall": "electron-rebuild",
