--- a/package.json
+++ b/package.json
@@ -57,7 +57,15 @@
       "license": "LICENSE"
     },
     "win": {
-      "target": "nsis",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "ia32",
+            "x64"
+          ]
+        }
+      ],
       "icon": "static/icon.ico",
       "publisherName": "David Csizmadia, Milan Szekely"
     },
